Adding auth0 auth

--- a/src/frontends/android/app/src/main/res/menu/main.xml
+++ b/src/frontends/android/app/src/main/res/menu/main.xml
@@ -17,6 +17,11 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/propervpn_login"
+        android:enabled="true"
+        android:title="ProperVPN login"
+        android:visible="true" />
+    <item
         android:id="@+id/menu_import_profile"
         android:title="@string/profile_import"
         app:showAsAction="withText" />
